[package]
name = "wroff"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only AND Apache-2.0"
include = ["GPL-2.0.txt", "Apache-2.0.txt"]
publish = false
authors = ["Robert R. Russell <robert@rrbrussell.com>"]
description = "A new web centric version of the classic roff tool"
readme = "README.md"
homepage = "https://www.rrbrussell.com/software/wroff"
documentation = "https://www.rrbrussell.com/documentation/wroff"
repository = "https://github.com/rrbrussell/wroff"

[lint.rust]
unsafe_code = "forbid"

[[bin]]
name = "wroff"
path = "src/main.rs"
version = "0.0.1"

[[bin]]
name = "soelim"
path = "src/bin/soelim.rs"
version = "0.2.0"

[dependencies]

[dependencies.clap]
version = ">=4.5.16"
default-features = true
features = ["derive"]

[features]
