[workspace]
resolver = "2"

[workspace.package]
authors = ["Robert R. Russell <robert@rrbrussell.com>"]
categories = ""
description = "A new tool for making static websites."
documentation = "https://www.rrbrussell.com/documentation/wroff"
edition = "2021"
exclude = [""]
homepage = "https://www.rrbrussell.com/software/wroff"
include = ["GPL-2.0.txt", "Apache-2.0.txt"]
keywords = [""]
license = "GPL-2.0-only AND Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/rrbrussell/wroff"
version = "0.1.0"

[lint.rust]
unsafe_code = "forbid"

[dependencies]

[dependencies.clap]
version = ">=4.5.16"
default-features = true
features = ["derive"]

[features]
